[gd_scene load_steps=4 format=3 uid="uid://36e403gjxwl1"]

[ext_resource type="Script" path="res://prog54b.gd" id="1_3vac1"]

[sub_resource type="Theme" id="Theme_ai75t"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_u4f3m"]
default_font_size = 30

[node name="prog54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vac1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 448.0
offset_right = 516.0
offset_bottom = 561.0
theme = SubResource("Theme_ai75t")
text = "The sum of the four numbers is:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 556.0
offset_right = 528.0
offset_bottom = 669.0
theme = SubResource("Theme_ai75t")
text = "The average of the four numbers is:"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 22.0
offset_right = 201.0
offset_bottom = 145.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 275.0
offset_top = 26.0
offset_right = 454.0
offset_bottom = 149.0

[node name="LineEdit3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 540.0
offset_top = 28.0
offset_right = 719.0
offset_bottom = 151.0

[node name="LineEdit4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 831.0
offset_top = 30.0
offset_right = 1010.0
offset_bottom = 153.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 267.0
offset_right = 221.0
offset_bottom = 358.0
theme = SubResource("Theme_u4f3m")
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 272.0
offset_right = 603.0
offset_bottom = 363.0
theme = SubResource("Theme_u4f3m")
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 806.0
offset_top = 274.0
offset_right = 982.0
offset_bottom = 365.0
theme = SubResource("Theme_u4f3m")
text = "Exit"
